--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "babel-preset-env": "^1.7.0",
     "css-loader": "^2.1.1",
     "eslint": "^5.15.2",
+    "file-loader": "^3.0.1",
     "http-server": "^0.11.1",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0"
   },
